Fix scrollbar issues on Windows
Also disabling scroll on body when modal is open. Not ideal, but it
solves issue with two scrollbars displaying for fullscreen modals.
Should revisit this decision.

--- a/sass/OI.modal.scss
+++ b/sass/OI.modal.scss
@@ -8,6 +8,10 @@
   cursor: pointer;
 }
 
+body.no-scroll {
+  overflow: hidden;
+}
+
 .modal {
   display: none;
   position: fixed;
@@ -85,7 +89,7 @@
         margin: 0;
         padding-bottom: 75%;
         position: relative;
-        overflow: scroll;
+        overflow: auto;
         -webkit-overflow-scrolling: touch;
         
         iframe {
